--- a/positionstyles.css
+++ b/positionstyles.css
@@ -6,6 +6,10 @@
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   gap: 20px;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
 
 }
 .red1 { 
