--- a/positionstyles.css
+++ b/positionstyles.css
@@ -38,6 +38,9 @@
 } 
 /* Activity 2 styles */ 
 .content2 {
+  grid-template-columns: 50px 50px 50px 50px 50px;
+  grid-template-rows: 50px 50px 50px 50px 50px;
+  display:grid;
   /* This is the parent of the activity 2 boxes. */
 }
 .red2 {
@@ -49,19 +52,29 @@
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  grid-column: 2;
+  grid-row: 2;
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
+  grid-column: 3;
+  grid-row: 3;
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 4;
+  grid-row: 4;
 } 
 /* Activity 3 styles */ 
 .content3 {
+  display: grid;
+  grid-template-columns: 5;
+  grid-column-gap: 2;
+  grid-column: 6;
   /* This is the parent of the activity 3 boxes. */
 }
 .red3 {
@@ -73,6 +86,8 @@
   width: 100px; 
   height: 100px; 
   background-color: green;
+  grid-column: 6;
+  grid-row: 6;
 } 
 .yellow3 {
   width: 100px; 
