--- a/positionstyles.css
+++ b/positionstyles.css
@@ -80,7 +80,8 @@
 .red3 {
   width: 100px; 
   height: 100px; 
-  background-color: red; 
+  background-color: red;
+  grid-column: 1/3; 
 } 
 .green3 {
   width: 100px; 
@@ -98,6 +99,7 @@
   width: 100px;
   height: 100px; 
   background-color: blue; 
+  grid-column: 1/3;
 } 
 /* Activity 4 styles */ 
 .content4 {
