--- a/positionstyles.css
+++ b/positionstyles.css
@@ -1,29 +1,22 @@
 /* CSS - Name: "positionstyles.css" */
 /* Activity 1 styles */
-.content1  {
+.content1 {
   /* This is the parent of the activity 1 boxes. */
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   gap: 20px;
-  justify-content: center;
-  align-content: center;
-  justify-items: center;
-  align-items: center;
-
 }
 .red1 { 
   width: 100%; 
   height: 100px; 
   background-color: red; 
-  grid-column: 1/3;
-
+  grid-column: 1 / 3;
 } 
 .green1 {
   width: 200px; 
   height: 200px; 
   background-color: green; 
-
 } 
 .yellow1 {
   width: 200px; 
@@ -34,61 +27,68 @@
   width: 100%; 
   height: 100px; 
   background-color: blue; 
-  grid-column: 1/3;
+  grid-column: 1 / 3;
 } 
+
 /* Activity 2 styles */ 
 .content2 {
-  grid-template-columns: 50px 50px 50px 50px 50px;
-  grid-template-rows: 50px 50px 50px 50px 50px;
-  display:grid;
   /* This is the parent of the activity 2 boxes. */
+  position: relative;
+  width: max-content;
 }
 .red2 {
   width: 100px; 
   height: 100px; 
   background-color: red; 
+  position: relative;
+  z-index: 4;
 } 
 .green2 { 
   width: 100px; 
   height: 100px; 
   background-color: green; 
-  grid-column: 2;
-  grid-row: 2;
+  margin-top: -50px;
+  margin-left: 50px;
+  position: relative;
+  z-index: 3;
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
-  grid-column: 3;
-  grid-row: 3;
+  margin-top: -50px;
+  margin-left: 100px;
+  position: relative;
+  z-index: 2;
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
-  grid-column: 4;
-  grid-row: 4;
+  margin-top: -50px;
+  margin-left: 150px;
+  position: relative;
+  z-index: 1;
 } 
+
 /* Activity 3 styles */ 
 .content3 {
-  display: grid;
-  grid-template-columns: 5;
-  grid-column-gap: 2;
-  grid-column: 6;
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  justify-items: center;
 }
 .red3 {
-  width: 100px; 
+  width: 200px; 
   height: 100px; 
-  background-color: red;
-  grid-column: 1/3; 
+  background-color: red; 
+  grid-column: 1 / 3;
 } 
 .green3 {
   width: 100px; 
   height: 100px; 
   background-color: green;
-  grid-column: 6;
-  grid-row: 6;
 } 
 .yellow3 {
   width: 100px; 
@@ -96,36 +96,50 @@
   background-color: gold; 
 } 
 .blue3 {
-  width: 100px;
+  width: 200px;
   height: 100px; 
   background-color: blue; 
-  grid-column: 1/3;
+  grid-column: 1 / 3;
 } 
+
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 100px 200px 100px;
+  gap: 10px;
   height: 400px;
 }
 .red4 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 200px; 
   background-color: green; 
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
 } 
 .yellow4 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: gold; 
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
 } 
 .blue4 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
 } 
+
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
@@ -135,49 +149,76 @@
   width: 100px; 
   height: 100px; 
   background-color: red; 
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 10px;
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
-
+  width: 100%; 
+  height: auto; 
+  background-color: transparent; 
+  /* This holds the text */
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
   background-color: gold; 
-
+  overflow: auto;
+  padding: 10px;
 } 
 .blue5 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
+  float: left;
+  margin-right: 20px;
+  margin-top: 10px;
 } 
+
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: repeat(4, 100px);
+  gap: 10px;
+  position: relative;
 }
 .red6 {
   width: 100px; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
+  z-index: 3;
+  position: relative;
 } 
 .green6 {
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  grid-column: 2 / 4;
+  grid-row: 2 / 4;
+  z-index: 2;
+  position: relative;
 } 
 .yellow6 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
+  grid-column: 3 / 5;
+  grid-row: 3 / 5;
+  z-index: 1;
+  position: relative;
 } 
 .blue6 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+  z-index: 4;
+  position: relative;
 } 
-
 
 /* Do not make any changes below here */
 .activity {
@@ -221,33 +262,29 @@
 }
 
 .hint i {
-  position: absolute;
-  transform: translate(-6px, 0);
-  margin-top: 16px;
-  right: 10px;
-  top: -3px;
+position: absolute;
+transform: translate(-6px, 0);
+margin-top: 16px;
+right: 10px;
+top: -3px;
 }
 .hint i:before, .hint i:after {
-  content: "";
-  position: absolute;
-  background-color: black;
-  width: 3px;
-  height: 9px;
+content: "";
+position: absolute;
+background-color: black;
+width: 3px;
+height: 9px;
 }
 .hint i:before {
-  transform: translate(2px, 0) rotate(45deg);
+transform: translate(2px, 0) rotate(45deg);
 }
 .hint i:after {
-  transform: translate(-2px, 0) rotate(-45deg);
+transform: translate(-2px, 0) rotate(-45deg);
 }
 
 .hint input[type=checkbox]:checked ~ i:before {
-  transform: translate(-2px, 0) rotate(45deg);
+transform: translate(-2px, 0) rotate(45deg);
 }
 .hint input[type=checkbox]:checked ~ i:after {
-  transform: translate(2px, 0) rotate(-45deg);
-}
-.hint a {
-  position: relative;
-  z-index: 1;
+transform: translate(2px, 0) rotate(-45deg);
 }
